# gitodo

./: .coveragerc  .editorconfig  .gitignore  .justfile  .mustache  pyproject.toml  test.yaml
src/: main.py  tasks.py
src/gitodo/: app.py  ioops.py  tasks.py
tests/: test_tasks.py
